fix(ui): stop host squash

--- a/SMTP.Impostor.Worker/src/app-root/component.css
+++ b/SMTP.Impostor.Worker/src/app-root/component.css
@@ -41,6 +41,7 @@
 }
 
 .host {
+  flex: 0 0 auto;
   display: flex;
   justify-content: flex-start;
   max-height: 100%;
